[project]
name = "restaurant-booking"
version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "app/main.py",
    "app/migrations/*"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
